MID-8155 fixed visibility for Show more link on the widget panel + icon style fix

--- a/gui/admin-gui/src/frontend/scss/midpoint.scss
+++ b/gui/admin-gui/src/frontend/scss/midpoint.scss
@@ -1152,6 +1152,10 @@ span.tree-content > table tr td:first-child {
 	display: inline-block;
 }
 
+.small-box-default-icon{
+  font-size: 50px !important;
+}
+
 .small-box{
 	cursor: default;
 }
